[tool.poetry]
name = "whylogs-container-types"
version = "0.4.0"
description = ""
authors = ["Anthony Naddeo <anthony@whylabs.ai>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "whylogs_container_types/**/*.py" }]

[tool.poetry.dependencies]
python = "^3.8"
whylogs = "*"


[tool.poetry.group.dev.dependencies]
pyright = "^1.1.337"
black = "^23.11.0"
autoflake = "^2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 140

[tool.pyright]
include = ["whylogs_container"]
typeCheckingMode = "strict"

reportMissingTypeStubs = false
reportMissingParameterType = false
reportMissingTypeArgumet = false


[project.urls]
Homepage = "https://github.com/whylabs/whylogs-container-types"
